--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,8 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build with Gradle
+      - name: Run tests
+        run: ./gradlew test --no-daemon
+
+      - name: Build application
         run: ./gradlew build --no-daemon
